# diffract

./: .gitignore  .travis.yml  Cargo.toml  build.rs  rustfmt.toml
grammars/: calc-no-ws.l  calc-no-ws.y  calc.l  calc.y  java-no-ws.l  java-no-ws.y  java.l  java.y  txt.l  txt.y
src/: main.rs
src/lib/: action.rs  ast.rs  character_map.rs  chawathe98_matcher.rs  edit_script.rs  emitters.rs  fingerprint.rs  gt_matcher.rs  hqueue.rs  info_tree.rs  label_maps.rs  labelmaps.rs  matchers.rs  mod.rs  multi_mappings.rs  myers_matcher.rs  null_matcher.rs  parser.rs  patch.rs  qgram.rs  rted.rs  sequence.rs  similarity.rs  zs_matcher.rs
tests/: Comment.java  CommentMinimal.java  HelloMinimal.java  JavadocComment.java  NestedComment.java  Test0.txt  Test1.java  calc_syntax_err.calc  common.rs  lorem1.txt  lorem2.txt  mult.calc  short2.txt  test_ast.rs  test_edit_script.rs  test_edit_script_fuzzer.rs  test_hqueue.rs  test_matcher.rs
tests/grammars/: broken.l  broken.y
