[package]
name = "diffract"
version = "0.1.0"
authors = ["Sarah Mount <sarah.mount@kcl.ac.uk>"]
include = ["src/**/*", "grammars/*", "Cargo.toml"]
repository = "https://github.com/softdevteam/diffract"
homepage = "https://github.com/softdevteam/diffract.git"
license = "UPL"
description = "Generate source code diffs based on ASTs."
build = "build.rs"

[[bin]]
doc = false
name = "diffract"

[lib]
name = "diffract"
path = "src/lib/mod.rs"

[build-dependencies]
glob = "0.2.11"

[dependencies]
docopt = "0.7.0"
dot = "0.1.2"
env_logger = "0.4.2"
log = "0.3.7"
rustc-serialize = "0.3"
term = "0.4.5"
cfgrammar = { git = "https://github.com/softdevteam/cfgrammar" }
lrlex = { git = "http://github.com/softdevteam/lrlex" }
lrpar = { git = "http://github.com/softdevteam/lrpar" }
lrtable = { git = "http://github.com/softdevteam/lrtable" }

[dev-dependencies]
proptest = "0.5.0"
